# casper-node

./: .drone.yml  Cargo.toml  Makefile  deny.toml  performance_log.txt
ci/: nightly-test.sh
execution_engine/: Cargo.toml
execution_engine/benches/: opcode_bench.rs  trie_bench.rs  vm_bench.rs
execution_engine/src/: core.rs  shared.rs
execution_engine/src/core/engine_state/: chainspec_registry.rs  engine_config.rs  error.rs  executable_deploy_item.rs  execution_effect.rs  execution_result.rs  genesis.rs  mod.rs  op.rs  step.rs  system_contract_cache.rs  system_contract_registry.rs  transfer.rs  upgrade.rs
execution_engine/src/core/execution/: error.rs  executor.rs
execution_engine/src/core/resolvers/: memory_resolver.rs  mod.rs  v1_resolver.rs
execution_engine/src/core/runtime/: auction_internal.rs  externals.rs  handle_payment_internal.rs  host_function_flag.rs  mint_internal.rs  mod.rs  scoped_instrumenter.rs  standard_payment_internal.rs  utils.rs
execution_engine/src/core/runtime_context/: dictionary.rs  mod.rs  tests.rs
execution_engine/src/core/tracking_copy/: byte_size.rs  ext.rs  meter.rs  mod.rs  tests.rs
execution_engine/src/engine_state/: wasm_v1.rs
execution_engine/src/runtime/: mod.rs  utils.rs  wasm_prep.rs
execution_engine/src/shared/: additive_map.rs  execution_journal.rs  host_function_costs.rs  opcode_costs.rs  storage_costs.rs  system_config.rs  transform.rs  wasm.rs  wasm_config.rs  wasm_engine.rs  wasm_prep.rs
execution_engine/src/shared/newtypes/: macros.rs  mod.rs
execution_engine/src/shared/system_config/: auction_costs.rs  handle_payment_costs.rs  mint_costs.rs  standard_payment_costs.rs
execution_engine/src/shared/wasm_engine/: host_interface.rs  macros.rs  wasmer_backend.rs  wasmi_backend.rs  wasmtime_backend.rs
execution_engine/src/storage/error/: in_memory.rs  lmdb.rs
execution_engine/src/storage/global_state/: in_memory.rs  lmdb.rs  mod.rs  scratch.rs
execution_engine/src/storage/store/: mod.rs  (+2 more)
execution_engine/src/system/: auction.rs  handle_payment.rs  mint.rs
execution_engine_testing/test_support/: Cargo.toml
execution_engine_testing/test_support/src/: auction.rs  chainspec_config.rs  lib.rs  transfer.rs  wasm_test_builder.rs
execution_engine_testing/tests/: Cargo.toml  performance_log.txt
execution_engine_testing/tests/benches/: auction_bench.rs  transfer_bench.rs
execution_engine_testing/tests/src/: lmdb_fixture.rs  wasm_utils.rs
hashing/: Cargo.toml
hashing/src/: lib.rs
node/: Cargo.toml
node/src/: components.rs  effect.rs  lib.rs
node/src/components/: contract_runtime.rs  deploy_acceptor.rs  transaction_acceptor.rs
node/src/reactor/: initializer.rs  validator.rs
node/src/types/: chainspec.rs  validator_matrix.rs
resources/local/: chainspec.toml.in  config.toml
resources/private/: chainspec.toml.in
resources/production/: chainspec.toml  config-example.toml
resources/test_wat/: examples.wat  mandelbrot.wat  primes.wat
smart_contracts/contract/: Cargo.toml
smart_contracts/contract/src/: lib.rs  no_std_handlers.rs
smart_contracts/contracts/test/endless-loop/: Cargo.toml
smart_contracts/contracts/test/endless-loop/src/: main.rs
smart_contracts/contracts/test/gh-2346-regression/: Cargo.toml
smart_contracts/contracts/test/gh-2346-regression/src/: main.rs
smart_contracts/contracts/test/halo2-test/: Cargo.toml
smart_contracts/contracts/test/halo2-test/src/: main.rs
smart_contracts/contracts/test/no-std-support/: Cargo.toml
smart_contracts/contracts/test/no-std-support/src/: main.rs
smart_contracts/contracts/test/put-key-stored/: Cargo.toml
smart_contracts/contracts/test/put-key-stored/src/: main.rs
smart_contracts/contracts/test/serialization-simple-stored/: Cargo.toml  build.rs  u512.capnp
smart_contracts/contracts/test/serialization-simple-stored/src/: main.rs
smart_contracts/contracts/test/serialization-stored/: Cargo.toml  build.rs
smart_contracts/contracts/test/serialization-stored/src/: main.rs
smart_contracts/contracts/test/stdlib-support/: Cargo.toml
smart_contracts/contracts/test/stdlib-support/src/: main.rs
storage/src/data_access_layer/: auction.rs
types/: Cargo.toml  build.rs
types/benches/: bytesrepr_bench.rs
types/src/: access_rights.rs  account.rs  api_error.rs  block_time.rs  byte_code.rs  bytesrepr.rs  cl_type.rs  cl_value.rs  contract_wasm.rs  contracts.rs  deploy_info.rs  era_id.rs  execution_result.rs  gas.rs  gens.rs  key.rs  lib.rs  motes.rs  named_key.rs  phase.rs  protocol_version.rs  runtime_args.rs  semver.rs  stored_value.rs  transaction.rs  transfer.rs  uint.rs  uref.rs
types/src/account/: account_hash.rs  action_thresholds.rs  associated_keys.rs  weight.rs
types/src/auction/: auction.rs
types/src/bytesrepr/: bytes.rs
types/src/chainspec/: transaction_config.rs
types/src/cl_value/: jsonrepr.rs
types/src/crypto/: asymmetric_key.rs  public_key_bytes.rs
types/src/system/: call_stack_element.rs
types/src/transaction/: pricing_mode.rs  transaction_entry_point.rs  transaction_target.rs  transaction_v1.rs
utils/global-state-update-gen/src/: main.rs
utils/retrieve-state/src/: lib.rs
utils/validation/: Cargo.toml
utils/validation/src/: abi.rs  generators.rs  lib.rs  test_case.rs
(+375 files in other folders)
