[package]
name = "gh-2346-regression"
version = "0.1.0"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "gh_2346_regression"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
default = ["casper-contract/default"]

[dependencies]
casper-contract = { path = "../../../contract", default-features = false }
casper-types = { path = "../../../../types" }
