[package]
name = "put-key-stored"
version = "0.1.0"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "put_key_stored"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
