[package]
name = "stdlib-support"
version = "0.1.0"
authors = ["Michał Papierski <michal@casperlabs.io>"]
edition = "2021"

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }

[[bin]]
name = "stdlib_support"
path = "src/main.rs"
bench = false
doctest = false
test = false
